2009-07-28:
===========

- Continued work on image save into Moodle. This time worked on refining the 
implementation of image save as a file.

- Fixes/improvements to the server-side script imagesave.php. Now the script 
determines if an image comes from a course and updates it accordingly - if 
permissions allow it. If the image cannot be found/updated, then a new image is 
saved in the PaintWeb images folder inside the data dir.

- Implemented support for image file types in the PaintWeb.imageSave() method.  
Currently only Firefox 3.5 and Opera 10 can save PNG and JPEG images. The rest 
of the browsers only support PNG.

- When an image from a course is updated, PaintWeb tries to maintain the same 
file format: PNG or JPEG. If the format cannot be maintained, then a new PNG 
image is created in the PaintWeb images folder from the data dir.

- TinyMCE plugin improvements. Made it behave better with regards to image 
updates/saves.

- New config option for image save quality (for JPEGs).
- New config option for "moodleSaveMethod". Now users/devs can easily switch the 
PaintWeb Moodle extension to save images as data URLs or as files, depending on 
their likings.

- Updated ext/moodle/imageview.php to better integrate into Moodle.

- Updates for English strings.


2009-07-26:
===========

- Fixed the TinyMCE plugin in Firefox 3.0. PaintWeb was failing image saves, GUI 
show/hide, etc.
- Further work on image save in Moodle 1.9. This time on two fronts:

a) Save image as a data URL. I worked around the problem in TinyMCE which causes 
data URLs to be mangled. Now saving the image as a data URL works fine. I can 
also provide a patch to TinyMCE 3 which fixes the problem entirely.

Problems remaining:
* IE 6 / IE 7 data URL support;
* client-side security issues when trying to edit an image with a data URL in 
Webkit and Gecko 1.9.0.

b) Save the image in the data directory of Moodle, with a unique hash (sha1).  