@@ -1,0 +1,8 @@
+tinyMCE.addI18n('en.paintweb_dlg',{
+	title: 'Create a new image',
+  widthLabel: 'Width: ',
+  heightLabel: 'Height: ',
+  bgrColorLabel: 'Background color: ',
+  altTextLabel: 'Alternate text:',
+  altTextTitle: 'This text is displayed when the image cannot render.',
+});
