@@ -1,0 +1,37 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{#paintweb_dlg.title}</title>
+    <script type="text/javascript" src="../../tiny_mce_popup.js"></script>
+    <script type="text/javascript" src="../../utils/form_utils.js"></script>
+    <script type="text/javascript" src="js/newimage.js"></script>
+  </head>
+  <body>
+    <form id="newimageform">
+      <p><label for="imgWidth">{#paintweb_dlg.widthLabel}</label> <input 
+      type="number" id="imgWidth" value="400"></p>
+
+      <p><label for="imgHeight">{#paintweb_dlg.heightLabel}</label> <input 
+      type="number" id="imgHeight" value="300"></p>
+
+      <p><label for="imgBgrColor">{#paintweb_dlg.bgrColorLabel}</label>
+      <input type="text" id="imgBgrColor" value="#ffffff" 
+      onchange="updateColor('imgBgrColor_pick', 'imgBgrColor')"></p>
+
+      <p title="{#paintweb_dlg.altTextTitle}"><label 
+        for="altText">{#paintweb_dlg.altTextLabel}</label> <input type="text" 
+      id="altText"></p>
+
+      <div class="mceActionPanel">
+        <div style="float: left">
+          <input type="submit" id="insert" name="insert" value="{#insert}" />
+        </div>
+
+        <div style="float: right">
+          <input type="button" id="cancel" name="cancel" value="{#cancel}" />
+        </div>
+      </div>
+    </form>
+  </body>
+</html>
