@@ -17,7 +17,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-07-17 22:38:40 +0300 $
+ * $Date: 2009-07-29 20:34:14 +0300 $
  */
 
 .paintweb_placeholder {
@@ -44,7 +44,7 @@
 }
 
 .paintweb_canvasContainer {
-  background: #fff;
+  background: url('images/checkers-big.png');
   border: 1px solid #000;
   overflow: hidden;
   position: relative
